# sim7000

./: .gitignore  .gitlab-ci.yml  .releaserc.yaml  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml  shell.nix
.github/workflows/: main.yml  mirror.yml  release.yml
async/src/: lib.rs  modem.rs  read.rs  write.rs
blocking/: Cargo.toml
blocking/src/commands/: ciicr.rs  ciprxget.rs  cipstart.rs  csclk.rs  ipr.rs
samples/nrf52840/: .gdbinit  Cargo.toml  Embed.toml  build.rs  memory.x  openocd.cfg
samples/nrf52840/.cargo/: config.toml
samples/nrf52840/src/: example.rs  logger.rs  main.rs
sim7000-async/: Cargo.toml
sim7000-async/src/: drop.rs  error.rs  gnss.rs  lib.rs  modem.rs  pump.rs  read.rs  single_arc.rs  slot.rs  tcp.rs  util.rs  voltage.rs  write.rs
sim7000-async/src/at_command/: at.rs  ate.rs  cbatchk.rs  ccid.rs  cedrxs.rs  cfgri.rs  cgmr.rs  cgnshor.rs  cgnspwr.rs  cgnstst.rs  cgnsurc.rs  cgreg.rs  cifsrex.rs  ciicr.rs  cipclose.rs  cipmux.rs  cipsend.rs  cipshut.rs  cipsprt.rs  cipstart.rs  cmee.rs  cmnb.rs  cnmp.rs  cops.rs  cpsi.rs  csclk.rs  csq.rs  cstt.rs  generic_response.rs  ifc.rs  ipr.rs  mod.rs
sim7000-async/src/at_command/request/: at.rs  ate.rs  cbatchk.rs  ccid.rs  cedrxs.rs  cfgri.rs  cgnspwr.rs  cgnsurc.rs  cgreg.rs  cifsrex.rs  ciicr.rs  cipclose.rs  cipmux.rs  cipsend.rs  cipshut.rs  cipsprt.rs  cipstart.rs  cmee.rs  cmnb.rs  cnmp.rs  cpsi.rs  csclk.rs  csq.rs  cstt.rs  ifc.rs  ipr.rs  mod.rs
sim7000-async/src/at_command/response/: ccid.rs  cifsrex.rs  cpsi.rs  csq.rs  mod.rs
sim7000-async/src/at_command/unsolicited/: app_pdp.rs  cbm.rs  cds.rs  cfun.rs  cgreg.rs  cmt.rs  cmti.rs  connection.rs  cpin.rs  creg.rs  cring.rs  ctzv.rs  cusd.rs  dst.rs  mod.rs  pdp.rs  power_down.rs  psnwid.rs  psuttz.rs  rdy.rs  receive.rs  remote_ip.rs  sms_ready.rs  ugnsinf.rs  voltage_warning.rs
sim7000-async/src/modem/: at_command.rs  command.rs  context.rs  mod.rs  power.rs
sim7000-async/src/modem/at_command/unsolicited/: app_pdp.rs  cbm.rs  cfun.rs  cgreg.rs  connection.rs  connection_result.rs  cpin.rs  creg.rs  cring.rs  ctzv.rs  cusd.rs  dst.rs  mod.rs  pdp.rs  power_down.rs  psnwid.rs  psuttz.rs  rdy.rs  receive.rs  remote_ip.rs  ugnsinf.rs  voltage_warning.rs
sim7000/src/: tcp_client.rs
sim7000/src/commands/: cgnsinf.rs  cgnsxtra.rs  cpsi.rs  csq.rs  httptofs.rs  ifc.rs  mod.rs
src/: drop.rs  error.rs  gnss.rs  lib.rs  pump.rs  read.rs  slot.rs  tcp.rs  tcp_client.rs  test.rs  util.rs  voltage.rs
src/at_command/: cbatchk.rs  ccid.rs  cclk.rs  cereg.rs  cgmr.rs  cgnapn.rs  cgnscold.rs  cgnscpy.rs  cgnsmod.rs  cgnspwr.rs  cgnsxtra.rs  cipclose.rs  cipmux.rs  cipshut.rs  clts.rs  cmgd.rs  cmgf.rs  cmgr.rs  cmgs.rs  cmnb.rs  cnact.rs  cnmi.rs  cnmp.rs  cntp.rs  cntpcid.rs  cops.rs  cpsi.rs  creg.rs  csclk.rs  cscs.rs  csms.rs  csq.rs  cstt.rs  gsn.rs  httptofs.rs  ifc.rs  mod.rs  sapbr.rs
src/at_command/unsolicited/: app_pdp.rs  cereg.rs  cgreg.rs  cmt.rs  cmti.rs  connection.rs  creg.rs  cring.rs  ctzv.rs  dst.rs  mod.rs  network_registration.rs  pdp.rs  power_down.rs  psnwid.rs  psuttz.rs  receive.rs  remote_ip.rs  ugnsinf.rs
src/commands/: at.rs  ate.rs  ccid.rs  cedrxs.rs  cfgri.rs  cgmr.rs  cgnscold.rs  cgnscpy.rs  cgnsinf.rs  cgnsmod.rs  cgnspwr.rs  cgreg.rs  ciicr.rs  ciprxget.rs  cipsend.rs  cipshut.rs  cipstart.rs  cipstatus.rs  cmee.rs  cmnb.rs  cnact.rs  cnmp.rs  cntp.rs  cntpcid.rs  cops.rs  cpsi.rs  csclk.rs  csq.rs  cstt.rs  httptofs.rs  ifc.rs  mod.rs  sapbr.rs
src/modem/: command.rs  context.rs  mod.rs  power.rs
