[package]
name = "sim7000-async"
version = "1.0.0"
authors = [
	"Zoey Riordan <zoey@dos.cafe>",
	"Joakim Hulthe <joakim@hulthe.net>",
]
description = "Drivers for the SIM7000 series of chips"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/technocreatives/sim7000"
edition = "2021"

[dependencies]
embassy-sync     = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", rev = "0a136c308eb3a949a7bca2f7f688277adb085489", features = ["nightly"] }
embassy-executor = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", rev = "0a136c308eb3a949a7bca2f7f688277adb085489", features = ["nightly"] }
embassy-time     = { version = "0.1.1", git = "https://github.com/embassy-rs/embassy", rev = "0a136c308eb3a949a7bca2f7f688277adb085489", features = ["nightly"] }
embassy-futures  = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "0a136c308eb3a949a7bca2f7f688277adb085489" }
embedded-io = { version = "0.4.0", features = ["async"] }
heapless = "0.7"
futures = { version = "0.3", default-features = false, features = ["async-await"] }
log = { version = "0.4", optional = true }
defmt = { version = "0.3.2", optional = true }
critical-section = "0.2.7"

[features]
default = ["log"]
log = [
    "dep:log",
    "embassy-executor/log",
    "embassy-futures/log",
    "embassy-sync/log",
    "embassy-time/log",
    "embedded-io/log",
]
defmt = [
    "dep:defmt",
    "embassy-executor/defmt",
    "embassy-futures/defmt",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "embedded-io/defmt",
    "heapless/defmt-impl",
]
