[package]
name = "sim7000-async"
version = "1.0.0"
authors = [
	"Zoey Riordan <zoey@dos.cafe>",
	"Joakim Hulthe <joakim@hulthe.net>",
]
description = "Drivers for the SIM7000 series of chips"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/technocreatives/sim7000"
edition = "2021"

[dependencies]
embassy-sync     = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", rev = "8d71fbd032f148fdeb96794c1f34b8a9c8a6abdf", features = ["nightly"] }
embassy-executor = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", rev = "8d71fbd032f148fdeb96794c1f34b8a9c8a6abdf", features = ["nightly"] }
embassy-time     = { version = "0.1.1", git = "https://github.com/embassy-rs/embassy", rev = "8d71fbd032f148fdeb96794c1f34b8a9c8a6abdf", features = ["nightly"] }
embassy-futures  = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "8d71fbd032f148fdeb96794c1f34b8a9c8a6abdf" }
embedded-io-async = { version = "0.5.0" }
heapless = "0.7"
futures = { version = "0.3", default-features = false, features = ["async-await"] }
log = { version = "0.4", optional = true }
defmt = { version = "0.3.2", optional = true }
critical-section = "0.2.7"

[features]
default = ["log"]
log = [
    "dep:log",
    "embassy-executor/log",
    "embassy-futures/log",
    "embassy-sync/log",
    "embassy-time/log",
]
defmt = [
    "dep:defmt",
    "embassy-executor/defmt",
    "embassy-futures/defmt",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "embedded-io-async/defmt-03",
    "heapless/defmt-impl",
]
