[package]
name = "sim7000-async"
version = "6.1.0"
authors = ["Zoey Riordan <zoey@dos.cafe>", "Joakim Hulthe <joakim@hulthe.net>"]
description = "Drivers for the SIM7000 series of chips"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/technocreatives/sim7000"
edition = "2021"
rust-version = "1.75"

[dependencies]
critical-section = "1.1.2"
defmt = { version = "0.3.2", optional = true }
embassy-executor = "0.5.0"
embassy-futures = "0.1.1"
embassy-sync = "0.5.0"
embassy-time = "0.3.0"
embedded-io-async = "0.6.0"
futures = { version = "0.3", default-features = false, features = [
	"async-await",
] }
heapless = "0.7"
log = { version = "0.4", optional = true }

[features]
default = ["log"]
log = ["dep:log"]
defmt = ["dep:defmt", "embassy-time/defmt", "heapless/defmt-impl"]
