[package]
name = "sim7000-async"
version = "0.1.0"
authors = ["Zoey Riordan <zoey@dos.cafe>"]
description = "Drivers for the SIM7000 series of chips"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/technocreatives/sim7000"
edition = "2021"

[dependencies]
embedded-hal-async = { version = "0.1.0-alpha.0"}
embedded-hal = { version = "1.0.0-alpha.8" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "b99533607ceed225dd12ae73aaa9a0d969a7365e", features = [ "nightly"]}
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "b99533607ceed225dd12ae73aaa9a0d969a7365e", features = ["nightly"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "b99533607ceed225dd12ae73aaa9a0d969a7365e", features = ["nightly"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "b99533607ceed225dd12ae73aaa9a0d969a7365e" }
embedded-io = "0.3.0"
heapless = { version = "0.7", features = ["defmt-impl"] }
futures-util = { version = "0.3", default-features = false }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
log = { version = "0.4", optional = true }
defmt = { version = "0.3.2", optional = true }
critical-section = "0.2.7"

[features]
default = ["log"]
log = [
    "dep:log",
    "embassy-executor/log",
    "embassy-futures/log",
    "embassy-sync/log",
    "embassy-time/log",
    "embedded-io/log",
]
defmt = [
    "dep:defmt",
    "embassy-executor/defmt",
    "embassy-futures/defmt",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "embedded-io/defmt",
    "heapless/defmt-impl",
]
