[package]
name = "nrf52840"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = "s" # flashing large binaries takes ages

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3.2"
defmt-rtt = "0.3.2"
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "0a136c308eb3a949a7bca2f7f688277adb085489", features = ["executor-thread", "arch-cortex-m", "nightly", "integrated-timers"] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "0a136c308eb3a949a7bca2f7f688277adb085489", features = ["nightly", "nrf52840", "time-driver-rtc1", "log"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "0a136c308eb3a949a7bca2f7f688277adb085489", features = [ "nightly"]}
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "0a136c308eb3a949a7bca2f7f688277adb085489", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-io = "0.4.0"
futures = { version = "0.3.17", default-features = false }
heapless = "0.7.15"
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
sim7000-async = { path = "../../", default-features = false, features = ["defmt"] }

