[package]
name = "nrf52840"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = "s" # flashing large binaries takes ages

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3.2"
defmt-rtt = "0.3.2"
embassy-executor = { version = "0.5.0", features = ["executor-thread", "arch-cortex-m", "integrated-timers"] }
embassy-futures = "0.1.1"
embassy-nrf = { version = "0.1.0", features = ["nrf52840", "time-driver-rtc1", "gpiote", "defmt", "unstable-pac"] }
embassy-sync = "0.5.0"
embassy-time = "0.3.0"
embedded-io-async = "0.6.0"
futures = { version = "0.3.17", default-features = false }
heapless = "0.7.15"
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
sim7000-async = { path = "../../", default-features = false, features = ["defmt"] }

